--- a/EDA and Visualization/EDA_and_Visualization.ipynb
+++ b/EDA and Visualization/EDA_and_Visualization.ipynb
@@ -41,6 +41,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rvydfZNgnAkt"
+      },
+      "source": [
+        "LOADING DATASET"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "uGgd8VUqXE2s"
@@ -885,17 +894,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "O9eGCTLCeqfO"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 54,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3IT_Y-8rwqCR"
@@ -1666,6 +1664,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "utCbIVK9m01B"
+      },
+      "source": [
+        "##COMMENTS COLUMN"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "rK-jk8HWVe3J"
       },
       "source": [
@@ -2174,31 +2181,21 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 441
+          "height": 350
         },
         "id": "222OSGkNq610",
-        "outputId": "6fdfe88e-8a3f-417d-9e14-45caa56ae5f8"
+        "outputId": "004aac72-dc1b-410c-a90a-93d363e0edef"
       },
       "source": [
         "plt.figure(figsize = (20,5))\n",
         "plt.title('Gender of Survey Respondents')\n",
         "plt.subplot(1,2,2)\n",
-        "sns.countplot(df['Gender'], hue = df['treatment'])\n",
+        "sns.countplot(x=df['Gender'], hue = df['treatment'])\n",
         "plt.title('Gender of Survey Respondents')\n",
         "plt.show()"
       ],
-      "execution_count": 76,
+      "execution_count": 97,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/seaborn/_decorators.py:43: FutureWarning:\n",
-            "\n",
-            "Pass the following variable as a keyword arg: x. From version 0.12, the only valid positional argument will be `data`, and passing other arguments without an explicit keyword will result in an error or misinterpretation.\n",
-            "\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -2263,7 +2260,7 @@
         "id": "PGJKVt_9HC2H"
       },
       "source": [
-        "State"
+        "##STATE COLUMN"
       ]
     },
     {
@@ -2304,23 +2301,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fXZ__lwkHBxn"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 79,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "EIeIh464qG9I"
       },
       "source": [
-        "NO OF EMPLOYEES"
+        "##NO OF EMPLOYEES COLUMN"
       ]
     },
     {
@@ -2361,7 +2347,7 @@
         "id": "nMmOjFOEqpKc"
       },
       "source": [
-        "TREATEMENT"
+        "##TREATEMENT COLUMN"
       ]
     },
     {
@@ -2407,7 +2393,7 @@
         "id": "lwqEaj8WwxWO"
       },
       "source": [
-        "Work_interfere"
+        "##WORK_INTERFERE COLUMN"
       ]
     },
     {
@@ -2473,7 +2459,7 @@
         "id": "Z_TXTCqJxwHw"
       },
       "source": [
-        "Wellness program"
+        "##WELLNESS PROGRAM COLUMN"
       ]
     },
     {
