--- a/EDA and Visualization/EDA_and_Visualization.ipynb
+++ b/EDA and Visualization/EDA_and_Visualization.ipynb
@@ -2347,7 +2347,7 @@
         "id": "nMmOjFOEqpKc"
       },
       "source": [
-        "##TREATEMENT COLUMN"
+        "##TREATMENT COLUMN"
       ]
     },
     {
