--- a/EDA and Visualization/Exploratory Data Analysis - 2014 Survey.ipynb
+++ b/EDA and Visualization/Exploratory Data Analysis - 2014 Survey.ipynb
@@ -301,6 +301,8 @@
     "id": "2VVgwFQwUVh7"
    },
    "source": [
+    "**Understanding the attributes**\n",
+    "\n",
     "The dataset contains the attributes which correspond to the following survey questions:\n",
     "- ```Timestamp```\n",
     "- ```Age```\n",
