2018 dataset from kaggle

--- a/DatasetCreation.ipynb
+++ b/DatasetCreation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d4d5051f",
+   "id": "444f8c10",
    "metadata": {},
    "source": [
     "# Dataset Creation with Web Scraping "
@@ -10,13 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6cf78a4",
+   "id": "89e12a78",
    "metadata": {},
    "source": [
-    "Typeform is an online SAAS company for web form and survey creation. OSMI utilizes this software for its surveys.\n",
-    "To scrape details of its online surveys, we use the ```requests``` and ```BeautifulSoup``` libraries.\n",
+    "Typeform is an online SAAS company for web form and survey creation. OSMI has utilized this software for its surveys from the year 2016. On the publicly available survey webpage, all the questions asked are followed by a distribution of the responses. We scrape data about the questions for the creation of a CSV file for each year's survey. To scrape the questions of its online surveys, we use the ```requests``` and ```BeautifulSoup``` libraries. In order to acquire the responses of each participant\n",
     "\n",
-    "Data Sources:\n",
+    "**Data Sources:**\n",
     "1. [OSMI 2016 Survey]()\n",
     "2. [OSMI 2017 Survey]()\n",
     "3. [OSMI 2018 Survey]()\n",
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db05ea8",
+   "id": "3af96149",
    "metadata": {},
    "source": [
     "## 01 OSMI 2018 Survey"
@@ -33,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "e4682ed3",
+   "execution_count": 173,
+   "id": "89a2bd48",
    "metadata": {
     "scrolled": false
    },
@@ -55,9 +54,10 @@
     "import re\n",
     "import sys\n",
     "import json\n",
-    "import pandas\n",
     "import requests\n",
+    "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
+    "from collections import Counter\n",
     "\n",
     "# Request typeform survey webpage for contents\n",
     "res = requests.get(\n",
@@ -78,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "951fbf9c",
+   "execution_count": 187,
+   "id": "481ac0ae",
    "metadata": {},
    "outputs": [
     {
@@ -137,8 +137,8 @@
       "Have you had a mental health disorder in the past?\n",
       "Have you ever sought treatment for a mental health disorder from a mental health professional?\n",
       "Do you have a family history of mental illness?\n",
-      "If you have a mental health disorder, how often do you feel that it interferes with your work *when being treated effectively?*\n",
-      "If you have a mental health disorder, how often do you feel that it interferes with your work *when* _*NOT*_* being treated effectively (i.e., when you are experiencing symptoms)?*\n",
+      "If you have a mental health disorder, how often do you feel that it interferes with your work when being treated effectively?\n",
+      "If you have a mental health disorder, how often do you feel that it interferes with your work when _NOT_ being treated effectively (i.e., when you are experiencing symptoms)?\n",
       "Have your observations of how another individual who discussed a mental health issue made you less likely to reveal a mental health issue yourself in your current workplace?\n",
       "How willing would you be to share with friends and family that you have a mental illness?\n",
       "Would you be willing to bring up a physical health issue with a potential employer in an interview?\n",
@@ -151,11 +151,12 @@
       "Have you observed or experienced supportive or well handled response to a mental health issue in your current or previous workplace?\n",
       "Overall, how well do you think the tech industry supports employees with mental health issues?\n",
       "Would you be willing to talk to one of us more extensively about your experiences with mental health issues in the tech industry? (Note that all interview responses would be used _anonymously_ and only with your permission.)\n",
-      "What country do you *live* in?\n",
-      "What US state or territory do you *live* in?\n",
+      "What country do you live in?\n",
+      "What US state or territory do you live in?\n",
       "What is your race?\n",
-      "What country do you *work* in?\n",
-      "What US state or territory do you *work* in?\n"
+      "What country do you work in?\n",
+      "What US state or territory do you work in?\n",
+      "68\n"
      ]
     }
    ],
@@ -174,12 +175,178 @@
     "json_param = json.loads(fields[0])\n",
     "\n",
     "# Print all the questions asked in the survey\n",
-    "print(\"Number of questions in the survey:\", len(json_param['blocks']))\n",
+    "questions = json_param['blocks']\n",
+    "print(\"Number of questions in the survey:\", len(questions))\n",
     "print('-'*100)\n",
-    "for question in json_param['blocks']:\n",
-    "    title = question['title']\n",
-    "        uestion['title'].replace('*', '')\n",
+    "\n",
+    "# Process each question to remove * present representing bolded words\n",
+    "for question in questions:\n",
+    "    question['title'] = question['title'].replace('*', '')\n",
     "    print(question['title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "cda07bd5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'yes_no': 16,\n",
+       "         'multiple_choice': 40,\n",
+       "         'opinion_scale': 7,\n",
+       "         'rating': 1,\n",
+       "         'dropdown': 4})"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Analyze the types of questions asked in the survey\n",
+    "question_types = []\n",
+    "for question in questions:\n",
+    "    question_types.append(question['type'])\n",
+    "Counter(question_types)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "8544aa85",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of respondents for each question out of 417 participants:\n",
+      " [417, 361, 361, 361, 361, 361, 361, 361, 361, 361, 361, 361, 361, 361, 360, 360, 361, 361, 56, 56, 56, 56, 56, 56, 56, 41, 417, 363, 363, 363, 363, 363, 363, 363, 363, 363, 363, 362, 363, 363, 363, 417, 191, 0, 81, 188, 415, 417, 417, 417, 417, 417, 417, 417, 417, 417, 51, 16, 417, 417, 417, 417, 417, 417, 311, 311, 417, 314]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the total number of participants in the survey\n",
+    "total_resp = json_param['totalResponsesCount']\n",
+    "\n",
+    "# Get the number of participants that answered each question\n",
+    "counts = []\n",
+    "for question in questions:\n",
+    "    counts.append(question['summary']['count'])\n",
+    "print(\"Number of respondents for each question out of {0} participants:\\n {1}\".format(total_resp, counts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "17d93e9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Kaggle dataset\n",
+    "data_2018 = pd.read_csv('datasets/2018_dataset_from_Kaggle.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "1375cca5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "123"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data_2018.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "5c7ec901",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#\n",
+      "Describe the conversation you had with your employer about your mental health, including their reactions and what actions were taken to address your mental health issue/questions.\n",
+      "Describe the conversation with coworkers you had about your mental health including their reactions.\n",
+      "Describe the conversation your coworker had with you about their mental health (please do not use names).\n",
+      "Describe the conversation you had with your previous employer about your mental health, including their reactions and actions taken to address your mental health issue/questions.\n",
+      "Describe the conversation you had with your previous coworkers about your mental health including their reactions.\n",
+      "Describe the conversation your coworker had with you about their mental health (please do not use names)..1\n",
+      "Anxiety Disorder (Generalized, Social, Phobia, etc)\n",
+      "Mood Disorder (Depression, Bipolar Disorder, etc)\n",
+      "Psychotic Disorder (Schizophrenia, Schizoaffective, etc)\n",
+      "Eating Disorder (Anorexia, Bulimia, etc)\n",
+      "Attention Deficit Hyperactivity Disorder\n",
+      "Personality Disorder (Borderline, Antisocial, Paranoid, etc)\n",
+      "Obsessive-Compulsive Disorder\n",
+      "Post-Traumatic Stress Disorder\n",
+      "Stress Response Syndromes\n",
+      "Dissociative Disorder\n",
+      "Substance Use Disorder\n",
+      "Addictive Disorder\n",
+      "Other\n",
+      "Anxiety Disorder (Generalized, Social, Phobia, etc).1\n",
+      "Mood Disorder (Depression, Bipolar Disorder, etc).1\n",
+      "Psychotic Disorder (Schizophrenia, Schizoaffective, etc).1\n",
+      "Eating Disorder (Anorexia, Bulimia, etc).1\n",
+      "Attention Deficit Hyperactivity Disorder.1\n",
+      "Personality Disorder (Borderline, Antisocial, Paranoid, etc).1\n",
+      "Obsessive-Compulsive Disorder.1\n",
+      "Post-traumatic Stress Disorder\n",
+      "Stress Response Syndromes.1\n",
+      "Dissociative Disorder.1\n",
+      "Substance Use Disorder.1\n",
+      "Addictive Disorder.1\n",
+      "Other.1\n",
+      "Anxiety Disorder (Generalized, Social, Phobia, etc).2\n",
+      "Mood Disorder (Depression, Bipolar Disorder, etc).2\n",
+      "Psychotic Disorder (Schizophrenia, Schizoaffective, etc).2\n",
+      "Eating Disorder (Anorexia, Bulimia, etc).2\n",
+      "Attention Deficit Hyperactivity Disorder.2\n",
+      "Personality Disorder (Borderline, Antisocial, Paranoid, etc).2\n",
+      "Obsessive-Compulsive Disorder.2\n",
+      "Post-traumatic Stress Disorder.1\n",
+      "Stress Response Syndromes.2\n",
+      "Dissociative Disorder.2\n",
+      "Substance Use Disorder.2\n",
+      "Addictive Disorder.2\n",
+      "Other.2\n",
+      "Describe the circumstances of the badly handled or unsupportive response.\n",
+      "Describe the circumstances of the supportive or well handled response.\n",
+      "Briefly describe what you think the industry as a whole and/or employers could do to improve mental health support for employees.\n",
+      "If there is anything else you would like to tell us that has not been covered by the survey questions, please use this space to do so.\n",
+      "Other.3\n",
+      "Start Date (UTC)\n",
+      "Submit Date (UTC)\n",
+      "Network ID\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in data_2018.columns:\n",
+    "    if '?' not in i:\n",
+    "        print(i)"
    ]
   }
  ],
