work on the cols

--- a/DatasetCreation.ipynb
+++ b/DatasetCreation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "444f8c10",
+   "id": "41a6a881",
    "metadata": {},
    "source": [
     "# Dataset Creation with Web Scraping "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89e12a78",
+   "id": "3871679c",
    "metadata": {},
    "source": [
     "Typeform is an online SAAS company for web form and survey creation. OSMI has utilized this software for its surveys from the year 2016. On the publicly available survey webpage, all the questions asked are followed by a distribution of the responses. We scrape data about the questions for the creation of a CSV file for each year's survey. To scrape the questions of its online surveys, we use the ```requests``` and ```BeautifulSoup``` libraries. In order to acquire the responses of each participant\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af96149",
+   "id": "62a731be",
    "metadata": {},
    "source": [
     "## 01 OSMI 2018 Survey"
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "89a2bd48",
+   "execution_count": 194,
+   "id": "6d9d018f",
    "metadata": {
     "scrolled": false
    },
@@ -78,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "id": "481ac0ae",
+   "execution_count": 195,
+   "id": "bba39c9d",
    "metadata": {},
    "outputs": [
     {
@@ -155,8 +155,7 @@
       "What US state or territory do you live in?\n",
       "What is your race?\n",
       "What country do you work in?\n",
-      "What US state or territory do you work in?\n",
-      "68\n"
+      "What US state or territory do you work in?\n"
      ]
     }
    ],
@@ -187,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "id": "cda07bd5",
+   "execution_count": 196,
+   "id": "86e77677",
    "metadata": {
     "scrolled": true
    },
@@ -203,7 +202,7 @@
        "         'dropdown': 4})"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,8 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "8544aa85",
+   "execution_count": 197,
+   "id": "cadc83fa",
    "metadata": {
     "scrolled": true
    },
@@ -246,107 +245,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "17d93e9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import Kaggle dataset\n",
-    "data_2018 = pd.read_csv('datasets/2018_dataset_from_Kaggle.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "id": "1375cca5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "123"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(data_2018.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
-   "id": "5c7ec901",
+   "execution_count": 198,
+   "id": "a08fef6b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#\n",
-      "Describe the conversation you had with your employer about your mental health, including their reactions and what actions were taken to address your mental health issue/questions.\n",
-      "Describe the conversation with coworkers you had about your mental health including their reactions.\n",
-      "Describe the conversation your coworker had with you about their mental health (please do not use names).\n",
-      "Describe the conversation you had with your previous employer about your mental health, including their reactions and actions taken to address your mental health issue/questions.\n",
-      "Describe the conversation you had with your previous coworkers about your mental health including their reactions.\n",
-      "Describe the conversation your coworker had with you about their mental health (please do not use names)..1\n",
-      "Anxiety Disorder (Generalized, Social, Phobia, etc)\n",
-      "Mood Disorder (Depression, Bipolar Disorder, etc)\n",
-      "Psychotic Disorder (Schizophrenia, Schizoaffective, etc)\n",
-      "Eating Disorder (Anorexia, Bulimia, etc)\n",
-      "Attention Deficit Hyperactivity Disorder\n",
-      "Personality Disorder (Borderline, Antisocial, Paranoid, etc)\n",
-      "Obsessive-Compulsive Disorder\n",
-      "Post-Traumatic Stress Disorder\n",
-      "Stress Response Syndromes\n",
-      "Dissociative Disorder\n",
-      "Substance Use Disorder\n",
-      "Addictive Disorder\n",
-      "Other\n",
-      "Anxiety Disorder (Generalized, Social, Phobia, etc).1\n",
-      "Mood Disorder (Depression, Bipolar Disorder, etc).1\n",
-      "Psychotic Disorder (Schizophrenia, Schizoaffective, etc).1\n",
-      "Eating Disorder (Anorexia, Bulimia, etc).1\n",
-      "Attention Deficit Hyperactivity Disorder.1\n",
-      "Personality Disorder (Borderline, Antisocial, Paranoid, etc).1\n",
-      "Obsessive-Compulsive Disorder.1\n",
-      "Post-traumatic Stress Disorder\n",
-      "Stress Response Syndromes.1\n",
-      "Dissociative Disorder.1\n",
-      "Substance Use Disorder.1\n",
-      "Addictive Disorder.1\n",
-      "Other.1\n",
-      "Anxiety Disorder (Generalized, Social, Phobia, etc).2\n",
-      "Mood Disorder (Depression, Bipolar Disorder, etc).2\n",
-      "Psychotic Disorder (Schizophrenia, Schizoaffective, etc).2\n",
-      "Eating Disorder (Anorexia, Bulimia, etc).2\n",
-      "Attention Deficit Hyperactivity Disorder.2\n",
-      "Personality Disorder (Borderline, Antisocial, Paranoid, etc).2\n",
-      "Obsessive-Compulsive Disorder.2\n",
-      "Post-traumatic Stress Disorder.1\n",
-      "Stress Response Syndromes.2\n",
-      "Dissociative Disorder.2\n",
-      "Substance Use Disorder.2\n",
-      "Addictive Disorder.2\n",
-      "Other.2\n",
-      "Describe the circumstances of the badly handled or unsupportive response.\n",
-      "Describe the circumstances of the supportive or well handled response.\n",
-      "Briefly describe what you think the industry as a whole and/or employers could do to improve mental health support for employees.\n",
-      "If there is anything else you would like to tell us that has not been covered by the survey questions, please use this space to do so.\n",
-      "Other.3\n",
-      "Start Date (UTC)\n",
-      "Submit Date (UTC)\n",
-      "Network ID\n"
+      "Number of columns: 123\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "0 #\n",
+      "14 Describe the conversation you had with your employer about your mental health, including their reactions and what actions were taken to address your mental health issue/questions.\n",
+      "17 Describe the conversation with coworkers you had about your mental health including their reactions.\n",
+      "19 Describe the conversation your coworker had with you about their mental health (please do not use names).\n",
+      "40 Describe the conversation you had with your previous employer about your mental health, including their reactions and actions taken to address your mental health issue/questions.\n",
+      "43 Describe the conversation you had with your previous coworkers about your mental health including their reactions.\n",
+      "45 Describe the conversation your coworker had with you about their mental health (please do not use names)..1\n",
+      "50 Anxiety Disorder (Generalized, Social, Phobia, etc)\n",
+      "51 Mood Disorder (Depression, Bipolar Disorder, etc)\n",
+      "52 Psychotic Disorder (Schizophrenia, Schizoaffective, etc)\n",
+      "53 Eating Disorder (Anorexia, Bulimia, etc)\n",
+      "54 Attention Deficit Hyperactivity Disorder\n",
+      "55 Personality Disorder (Borderline, Antisocial, Paranoid, etc)\n",
+      "56 Obsessive-Compulsive Disorder\n",
+      "57 Post-Traumatic Stress Disorder\n",
+      "58 Stress Response Syndromes\n",
+      "59 Dissociative Disorder\n",
+      "60 Substance Use Disorder\n",
+      "61 Addictive Disorder\n",
+      "62 Other\n",
+      "63 Anxiety Disorder (Generalized, Social, Phobia, etc).1\n",
+      "64 Mood Disorder (Depression, Bipolar Disorder, etc).1\n",
+      "65 Psychotic Disorder (Schizophrenia, Schizoaffective, etc).1\n",
+      "66 Eating Disorder (Anorexia, Bulimia, etc).1\n",
+      "67 Attention Deficit Hyperactivity Disorder.1\n",
+      "68 Personality Disorder (Borderline, Antisocial, Paranoid, etc).1\n",
+      "69 Obsessive-Compulsive Disorder.1\n",
+      "70 Post-traumatic Stress Disorder\n",
+      "71 Stress Response Syndromes.1\n",
+      "72 Dissociative Disorder.1\n",
+      "73 Substance Use Disorder.1\n",
+      "74 Addictive Disorder.1\n",
+      "75 Other.1\n",
+      "76 Anxiety Disorder (Generalized, Social, Phobia, etc).2\n",
+      "77 Mood Disorder (Depression, Bipolar Disorder, etc).2\n",
+      "78 Psychotic Disorder (Schizophrenia, Schizoaffective, etc).2\n",
+      "79 Eating Disorder (Anorexia, Bulimia, etc).2\n",
+      "80 Attention Deficit Hyperactivity Disorder.2\n",
+      "81 Personality Disorder (Borderline, Antisocial, Paranoid, etc).2\n",
+      "82 Obsessive-Compulsive Disorder.2\n",
+      "83 Post-traumatic Stress Disorder.1\n",
+      "84 Stress Response Syndromes.2\n",
+      "85 Dissociative Disorder.2\n",
+      "86 Substance Use Disorder.2\n",
+      "87 Addictive Disorder.2\n",
+      "88 Other.2\n",
+      "105 Describe the circumstances of the badly handled or unsupportive response.\n",
+      "107 Describe the circumstances of the supportive or well handled response.\n",
+      "109 Briefly describe what you think the industry as a whole and/or employers could do to improve mental health support for employees.\n",
+      "110 If there is anything else you would like to tell us that has not been covered by the survey questions, please use this space to do so.\n",
+      "117 Other.3\n",
+      "120 Start Date (UTC)\n",
+      "121 Submit Date (UTC)\n",
+      "122 Network ID\n"
      ]
     }
    ],
    "source": [
-    "for i in data_2018.columns:\n",
+    "# Import Kaggle dataset and examine the columns\n",
+    "data_2018 = pd.read_csv('datasets/2018_dataset_from_Kaggle.csv')\n",
+    "print(\"Number of columns:\", len(data_2018.columns))\n",
+    "print('-'*100)\n",
+    "for count, i in enumerate(data_2018.columns):\n",
     "    if '?' not in i:\n",
-    "        print(i)"
+    "        print(count, i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f10ddc1e",
+   "metadata": {},
+   "source": [
+    "Since we look to aggregate columns from multiple datasets throughout the years, we merge the columns of descriptive questions to form a single column: `comments`. We also drop the first column representing the participant ID and a few other columns that are not relevant to our study."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "d67e6075",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['<strong>Are you self-employed?</strong>',\n",
+       "       'How many employees does your company or organization have?',\n",
+       "       'Is your employer primarily a tech company/organization?',\n",
+       "       'Is your primary role within your company related to tech/IT?',\n",
+       "       'Does your employer provide mental health benefits as part of healthcare coverage?',\n",
+       "       'Do you know the options for mental health care available under your employer-provided health coverage?',\n",
+       "       'Has your employer ever formally discussed mental health (for example, as part of a wellness campaign or other official communication)?',\n",
+       "       'Does your employer offer resources to learn more about mental health disorders and options for seeking help?',\n",
+       "       'Is your anonymity protected if you choose to take advantage of mental health or substance abuse treatment resources provided by your employer?',\n",
+       "       'If a mental health issue prompted you to request a medical leave from work, how easy or difficult would it be to ask for that leave?',\n",
+       "       ...\n",
+       "       'Would you be willing to talk to one of us more extensively about your experiences with mental health issues in the tech industry? (Note that all interview responses would be used <em>anonymously</em> and only with your permission.)',\n",
+       "       'What is your age?', 'What is your gender?',\n",
+       "       'What country do you <strong>live</strong> in?',\n",
+       "       'What US state or territory do you <strong>live</strong> in?',\n",
+       "       'What is your race?', 'Other.3',\n",
+       "       'What country do you <strong>work</strong> in?',\n",
+       "       'What US state or territory do you <strong>work</strong> in?',\n",
+       "       'Network ID'],\n",
+       "      dtype='object', length=120)"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_2018.drop(['#', 'Start Date (UTC)', 'Submit Date (UTC)'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4de6ff95",
+   "metadata": {},
+   "source": [
+    "The columns with indices between 50 to 62, 63 to 75 and 76 to 88 correspond to, respectively,\n",
+    "\n",
+    "`What disorder(s) have you been diagnosed with?`\n",
+    "\n",
+    "`If possibly, what disorder(s) do you believe you have?`\n",
+    "\n",
+    "`If so, what disorder(s) were you diagnosed with?`."
    ]
   }
  ],
